# claude-advanced-review

./: .gitignore  Makefile  README.md  SKILL.md  orchestrator.py  orchestrator.sh  pyproject.toml
merge/: __init__.py  merger.py
prompts/: ci-style.md  cross-check.md  default.md  repo-review.md
quality_reports/harness_changes/: 2026-06-18_deepseek-third-reviewer.md
runner/: __init__.py  preflight_runner.py  repo_collector.py  semgrep_runner.py  sonarqube_runner.py  test_runner.py
tests/: test_merge.py  test_preflight_runner.py  test_repo_collector.py  test_semgrep_runner.py  test_sonarqube_runner.py  test_test_runner.py  test_validator.py
tests/e2e/: test_orchestrator_e2e.py
tests/fixture-repo/: CLAUDE.md  app.py  diff.patch  pyproject.toml
validator/: __init__.py  requirements.txt  validator.py
